[project]
name = "reddit-sync"
version = "0.1.0"
description = "Sync Reddit subscriptions and multireddits between accounts"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
reddit-sync = "reddit_sync:main"
